syntax = "proto3";

package bible;

// Service definition for the Bible app.
service BibleService {
    // Get a list of Bible versions.
    rpc GetBibleVersions (Empty) returns (BibleVersionList);

    // Get a list of books in a specific Bible version.
    rpc GetBooksInVersion (GetBooksRequest) returns (BibleBookList);

    // Get a list of chapters in a specific book of a Bible version.
    rpc GetChaptersInBook (GetChaptersRequest) returns (BibleChapterList);

    // Get a list of verses in a specific chapter of a book in a Bible version.
    rpc GetVersesInChapter (GetVersesRequest) returns (BibleVerseList);

    // Get a specific verse in a chapter of a book in a Bible version.
    rpc GetVerse (GetVerseRequest) returns (BibleVerse);
}

// Message for an empty request.
message Empty {}

// Message to request a list of books in a specific Bible version.
message GetBooksRequest {
    string version = 1;
}

// Message to request a list of chapters in a specific book.
message GetChaptersRequest {
    string version = 1;
    string book = 2;
}

// Message to request a list of verses in a specific chapter.
message GetVersesRequest {
    string version = 1;
    string book = 2;
    int32 chapter = 3;
}

// Message to request a specific verse.
message GetVerseRequest {
    string version = 1;
    string book = 2;
    int32 chapter = 3;
    int32 verse = 4;
}

// Message for a list of Bible versions.
message BibleVersionList {
    repeated string versions = 1;
}

// Message for a list of books.
message BibleBookList {
    repeated string books = 1;
}

// Message for a list of chapters.
message BibleChapterList {
    repeated int32 chapters = 1;
}

// Message for a list of verses.
message BibleVerseList {
    repeated BibleVerse verses = 1;
}

// Message for a specific Bible verse.
message BibleVerse {
    string content = 1;
    int32 number = 2;
}
